# Lol-dashboard

./: .gitignore  README.md  analysis.py  api_client.py  config.py  database.py  export.py  extract.py  main.py  models.py  notebook.ipynb  pyproject.toml  requirements.txt  sample_match.json
tableau_data/: anomalies.csv  match_history.csv  player_insights.csv  player_summary.csv
